force-app/main/default/objects/Quotes__c/Quotes__c.object-meta.xml
<CustomObject>
    <label>Quotes</label>
    <nameField>
        <label>Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>