force-app/main/default/objects/Quotes__c/fields/INET_Request__c.field-meta.xml
<CustomField>
    <fullName>INET_Request__c</fullName>
    <label>INET Request</label>
    <referenceTo>INET_Request__c</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>