force-app/main/default/objects/Quotes__c/fields/Quote_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted_Date__c</fullName>
    <label>Quote Accepted Date</label>
    <type>Date</type>
</CustomField>