force-app/main/default/objects/Quotes__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason why the Quote was denied.</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing / Budget</fullName>
            </value>
            <value>
                <fullName>Expired Quote</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Competitor Chosen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>