force-app/main/default/objects/Quotes__c/validationRules/Provider_Portal_User_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Portal_User_Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.CATV_Provider_Portal_User &amp;&amp; ISCHANGED(Status__c) &amp;&amp;
 ISPICKVAL(Status__c, &apos;Accepted&apos;)</errorConditionFormula>
    <errorMessage>Invalid Quote Status for Portal User</errorMessage>
</ValidationRule>