force-app/main/default/objects/Quotes__c/validationRules/Rejection_Reason_on_Denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_on_Denied</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

ISPICKVAL( Status__c ,&quot;Denied&quot;),
ISBLANK(TEXT(Rejection_Reason__c ))

)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select a Rejection Reason before setting the status to Denied.</errorMessage>
</ValidationRule>