force-app/main/default/objects/Quotes__c/listViews/All_CATV_Quotes.listView-meta.xml
<ListView>
    <fullName>All_CATV_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Provider__c</columns>
    <columns>Requestor__c</columns>
    <columns>INET_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CATV Quotes</label>
</ListView>